--- a/t2/README.org
+++ b/t2/README.org
@@ -267,3 +267,264 @@ index 1e9044e..bc6c161 100644
      Name = "cheftest"
 [demo@demos-MacBook-Pro:~/pdev/chef-practice/t2(master)]$ #
 
+* Troubleshooting
+
+** aws_instance.chef (remote-exec): dpkg-deb: error: `chef_server.deb' is not a debian format archive
+
+opscode-omnibus-packages chef server
+
+curl --silent -o chef_server.deb https://opscode-omnibus-packages.s3.amazonaws.com/ubuntu/14.04/x86_64/chef_12.5.1-1_amd64.deb
+
+chef server is not a debian format archive
+
+
+
+
+aws_instance.chef (remote-exec): dpkg-deb: error: `chef_server.deb' is not a debian format archive
+
+#+BEGIN_SRC 
+[demo@demos-MBP:~/pdev/chef-practice/t2(master)]$ time terraform apply -var-file=secrets.tfvars
+aws_security_group.chef: Creating...
+  description:                          "" => "Allow ssh inbound traffic from everywhere"
+  egress.#:                             "" => "<computed>"
+  ingress.#:                            "" => "1"
+  ingress.2541437006.cidr_blocks.#:     "" => "1"
+  ingress.2541437006.cidr_blocks.0:     "" => "0.0.0.0/0"
+  ingress.2541437006.from_port:         "" => "22"
+  ingress.2541437006.protocol:          "" => "tcp"
+  ingress.2541437006.security_groups.#: "" => "0"
+  ingress.2541437006.self:              "" => "0"
+  ingress.2541437006.to_port:           "" => "22"
+  name:                                 "" => "chef"
+  owner_id:                             "" => "<computed>"
+  tags.#:                               "" => "1"
+  tags.Name:                            "" => "chef"
+  vpc_id:                               "" => "<computed>"
+aws_security_group.chef: Creation complete
+aws_instance.chef: Creating...
+  ami:                                       "" => "ami-5189a661"
+  availability_zone:                         "" => "<computed>"
+  ebs_block_device.#:                        "" => "<computed>"
+  ephemeral_block_device.#:                  "" => "<computed>"
+  instance_type:                             "" => "m3.medium"
+  key_name:                                  "" => "ephemeral-test"
+  monitoring:                                "" => "1"
+  placement_group:                           "" => "<computed>"
+  private_dns:                               "" => "<computed>"
+  private_ip:                                "" => "<computed>"
+  public_dns:                                "" => "<computed>"
+  public_ip:                                 "" => "<computed>"
+  root_block_device.#:                       "" => "1"
+  root_block_device.0.delete_on_termination: "" => "1"
+  root_block_device.0.iops:                  "" => "<computed>"
+  root_block_device.0.volume_size:           "" => "100"
+  root_block_device.0.volume_type:           "" => "<computed>"
+  security_groups.#:                         "" => "1"
+  security_groups.4064823014:                "" => "chef"
+  source_dest_check:                         "" => "1"
+  subnet_id:                                 "" => "<computed>"
+  tags.#:                                    "" => "1"
+  tags.Name:                                 "" => "chef"
+  tenancy:                                   "" => "<computed>"
+  vpc_security_group_ids.#:                  "" => "<computed>"
+aws_instance.chef: Provisioning with 'remote-exec'...
+aws_instance.chef (remote-exec): Connecting to remote host via SSH...
+aws_instance.chef (remote-exec):   Host: 54.218.172.233
+aws_instance.chef (remote-exec):   User: ubuntu
+aws_instance.chef (remote-exec):   Password: false
+aws_instance.chef (remote-exec):   Private key: true
+aws_instance.chef (remote-exec):   SSH Agent: true
+aws_instance.chef (remote-exec): Connecting to remote host via SSH...
+aws_instance.chef (remote-exec):   Host: 54.218.172.233
+aws_instance.chef (remote-exec):   User: ubuntu
+aws_instance.chef (remote-exec):   Password: false
+aws_instance.chef (remote-exec):   Private key: true
+aws_instance.chef (remote-exec):   SSH Agent: true
+aws_instance.chef (remote-exec): Connecting to remote host via SSH...
+aws_instance.chef (remote-exec):   Host: 54.218.172.233
+aws_instance.chef (remote-exec):   User: ubuntu
+aws_instance.chef (remote-exec):   Password: false
+aws_instance.chef (remote-exec):   Private key: true
+aws_instance.chef (remote-exec):   SSH Agent: true
+aws_instance.chef (remote-exec): Connecting to remote host via SSH...
+aws_instance.chef (remote-exec):   Host: 54.218.172.233
+aws_instance.chef (remote-exec):   User: ubuntu
+aws_instance.chef (remote-exec):   Password: false
+aws_instance.chef (remote-exec):   Private key: true
+aws_instance.chef (remote-exec):   SSH Agent: true
+aws_instance.chef (remote-exec): Connecting to remote host via SSH...
+aws_instance.chef (remote-exec):   Host: 54.218.172.233
+aws_instance.chef (remote-exec):   User: ubuntu
+aws_instance.chef (remote-exec):   Password: false
+aws_instance.chef (remote-exec):   Private key: true
+aws_instance.chef (remote-exec):   SSH Agent: true
+aws_instance.chef (remote-exec): Connected!
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/lock’
+aws_instance.chef (remote-exec): rm: cannot remove ‘/var/lib/apt/lists/partial’: Is a directory
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_Release’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_Release.gpg’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_main_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_main_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_multiverse_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_multiverse_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_restricted_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_restricted_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_universe_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/security.ubuntu.com_ubuntu_dists_trusty-security_universe_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_Release’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_Release.gpg’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_main_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_main_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_multiverse_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_multiverse_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_restricted_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_restricted_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_universe_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty-updates_universe_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_Release’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_Release.gpg’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_main_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_main_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_multiverse_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_multiverse_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_restricted_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_restricted_i18n_Translation-en’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_universe_binary-amd64_Packages’
+aws_instance.chef (remote-exec): removed ‘/var/lib/apt/lists/us-west-2.ec2.archive.ubuntu.com_ubuntu_dists_trusty_universe_i18n_Translation-en’
+aws_instance.chef (remote-exec): Reading package lists... 0%
+aws_instance.chef (remote-exec): Reading package lists... 0%
+aws_instance.chef (remote-exec): Reading package lists... 22%
+aws_instance.chef (remote-exec): Reading package lists... Done
+aws_instance.chef (remote-exec): Building dependency tree... 0%
+aws_instance.chef (remote-exec): Building dependency tree... 0%
+aws_instance.chef (remote-exec): Building dependency tree... 50%
+aws_instance.chef (remote-exec): Building dependency tree... 50%
+aws_instance.chef (remote-exec): Building dependency tree
+aws_instance.chef (remote-exec): Reading state information... 0%
+aws_instance.chef (remote-exec): Reading state information... 8%
+aws_instance.chef (remote-exec): Reading state information... Done
+aws_instance.chef (remote-exec): 0 upgraded, 0 newly installed, 0 to remove and 0 not upgraded.
+aws_instance.chef (remote-exec): Selecting previously unselected package liberror-perl.
+aws_instance.chef (remote-exec): (Reading database ...
+aws_instance.chef (remote-exec): (Reading database ... 5%
+aws_instance.chef (remote-exec): (Reading database ... 10%
+aws_instance.chef (remote-exec): (Reading database ... 15%
+aws_instance.chef (remote-exec): (Reading database ... 20%
+aws_instance.chef (remote-exec): (Reading database ... 25%
+aws_instance.chef (remote-exec): (Reading database ... 30%
+aws_instance.chef (remote-exec): (Reading database ... 35%
+aws_instance.chef (remote-exec): (Reading database ... 40%
+aws_instance.chef (remote-exec): (Reading database ... 45%
+aws_instance.chef (remote-exec): (Reading database ... 50%
+aws_instance.chef (remote-exec): (Reading database ... 55%
+aws_instance.chef (remote-exec): (Reading database ... 60%
+aws_instance.chef (remote-exec): (Reading database ... 65%
+aws_instance.chef (remote-exec): (Reading database ... 70%
+aws_instance.chef (remote-exec): (Reading database ... 75%
+aws_instance.chef (remote-exec): (Reading database ... 80%
+aws_instance.chef (remote-exec): (Reading database ... 85%
+aws_instance.chef (remote-exec): (Reading database ... 90%
+aws_instance.chef (remote-exec): (Reading database ... 95%
+aws_instance.chef (remote-exec): (Reading database ... 100%
+aws_instance.chef (remote-exec): (Reading database ... 51120 files and directories currently installed.)
+aws_instance.chef (remote-exec): Preparing to unpack .../liberror-perl_0.17-1.1_all.deb ...
+aws_instance.chef (remote-exec): Unpacking liberror-perl (0.17-1.1) ...
+aws_instance.chef (remote-exec): Selecting previously unselected package git-man.
+aws_instance.chef (remote-exec): Preparing to unpack .../git-man_1%3a1.9.1-1ubuntu0.1_all.deb ...
+aws_instance.chef (remote-exec): Unpacking git-man (1:1.9.1-1ubuntu0.1) ...
+aws_instance.chef (remote-exec): Selecting previously unselected package git.
+aws_instance.chef (remote-exec): Preparing to unpack .../git_1%3a1.9.1-1ubuntu0.1_amd64.deb ...
+aws_instance.chef (remote-exec): Unpacking git (1:1.9.1-1ubuntu0.1) ...
+aws_instance.chef (remote-exec): Processing triggers for man-db (2.6.7.1-1ubuntu1) ...
+aws_instance.chef (remote-exec): Setting up liberror-perl (0.17-1.1) ...
+aws_instance.chef (remote-exec): Setting up git-man (1:1.9.1-1ubuntu0.1) ...
+aws_instance.chef (remote-exec): Setting up git (1:1.9.1-1ubuntu0.1) ...
+aws_instance.chef (remote-exec): dpkg-deb: error: `chef_server.deb' is not a debian format archive
+aws_instance.chef (remote-exec): dpkg: error processing archive chef_server.deb (--install):
+aws_instance.chef (remote-exec):  subprocess dpkg-deb --control returned error exit status 2
+aws_instance.chef (remote-exec): Errors were encountered while processing:
+aws_instance.chef (remote-exec):  chef_server.deb
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: opscode-manage-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: opscode-push-jobs-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-sync-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: chef-server-ctl: command not found
+aws_instance.chef (remote-exec): sudo: opscode-reporting-ctl: command not found
+Error applying plan:
+
+1 error(s) occurred:
+
+ * Script exited with non-zero exit status: 1
+
+Terraform does not automatically rollback in the face of errors.
+Instead, your Terraform state file has been partially updated with
+any resources that successfully completed. Please address the error
+above and apply again to incrementally change your infrastructure.
+
+real	1m48.795s
+user	0m0.373s
+sys	0m0.341s
+[demo@demos-MBP:~/pdev/chef-practice/t2(master)]$ cd /tmp
+[demo@demos-MBP:/tmp]$ 
+  C-c C-c
+[demo@demos-MBP:/tmp]$ 
+#+END_SRC
+
+** terraform can't force destroy, or how can I get terraform to destroy group first
+
+For this case (below), I'd want terraform to really force destory the
+security group.  Why can't it?
+
+Here's what I do that will cause the terraform create/delete/create flow
+to break:
+
+Create main.tf with remote-exec that causes failure in provisioning.
+
+TF will bail after creating the ubuntu instacne.
+
+TF doesn't know whether the instacne was created successfully, but it
+knows it created the security group.
+
+#+BEGIN_SRC
+terraform plan -destroy -var-file=secrets.tfvars
+#+END_SRC
+
+Says that it will destroyt the security group, but when really destroying it
+
+#+BEGIN_SRC
+terraform destroy -var-file=secrets.tfvars
+#+END_SRC
+
+AWS complains that it can't destroy security group if an instacne is
+using it.
+
+I only know how to fix this by manually deleting the instance and re-runing TF destroy.
+
+terraform InvalidGroup.InUse destroy
+
+#+BEGIN_SRC
+[demo@demos-MBP:~/pdev/chef-practice/t2(master)]$ terraform destroy -force -var-file=secrets.tfvars
+aws_instance.chef: Refreshing state... (ID: i-9b995741)
+aws_security_group.chef: Refreshing state... (ID: sg-3915bf0a)
+aws_instance.chef: Destroying...
+aws_security_group.chef: Destroying...
+Error applying plan:
+
+1 error(s) occurred:
+
+ * aws_security_group.chef: InvalidGroup.InUse: There are active instances using security group 'chef'
+	status code: 400, request id: 
+
+Terraform does not automatically rollback in the face of errors.
+Instead, your Terraform state file has been partially updated with
+any resources that successfully completed. Please address the error
+above and apply again to incrementally change your infrastructure.
+[demo@demos-MBP:~/pdev/chef-practice/t2(master)]$ 
+#+END_SRC
