--- a/t2/README.org
+++ b/t2/README.org
@@ -2,7 +2,8 @@
 
 + you need to create secrets.tfvars since its not version conrolled
 + determine the region you're going to work in
-+ create new key.  Here's url for us-west-2 region: https://us-west-2.console.aws.amazon.com/ec2/v2/home?region=us-west-2#KeyPairs:sort=keyName
++ create new key.  Here's url for us-west-2 region:
+  https://us-west-2.console.aws.amazon.com/ec2/v2/home?region=us-west-2#KeyPairs:sort=keyName
 + replace =key_name = "ephemeral-test"= with your key name
 + run terraform
 #+BEGIN_SRC
